packages/filter-builder-react/examples/dev/src/errors/HttpRequestError.ts
export class HttpRequestError extends Error {
  constructor(
    message: string,
    public status?: number,
  ) {
    super(`${message}: ${status}`);
    this.name = 'HttpRequestError';
  }
}
